@@ -1,3 +1,7 @@
+2012-01-03 Tue  Jari Aalto  <jari.aalto@cante.net>
+
+	* epackage.el (epackage-mail-macro): Emacs 24 fix.
+
 2012-01-02 Tue  Jari Aalto  <jari.aalto@cante.net>
 
 	* epackage.el (epackage-batch-devel-lint-lisp): New.
